- added xlab(), ylab(), and main() for getting or setting these three parameters quickly. They only work for graphs that are created using BrailleR functions at this time.
- updated VI.gg() which add functions to create text elements so that accessible versions can be made; various internal functions added to get labels commonly found on ggplot() graphs.




# v0.25.6
- working on accessible Venn diagrams and time series plots
- working on accessibility for scatter plots
- fixed VI() method to handle additional arguments, although they are currently ignored.
- created function to choose long and short text for a boxplot; previously embedded in VI.boxplot()

# v0.25.5
- Added experimental work on making accessible graphs for mounting on the web
- added Volker Sorge and Donal Fitzpatrick to the package contributors list
- added MakeAccessibleSVG() and AddXML() as well as a bunch of internal functions to do the hard work.
- added Augment() method to take the functionality out of VI() that adds the content that feeds into the text descriptions because it will get used in other processes from here on.
- changes from VS merged via GitHub

# v0.25.4
- added JooYoung Seo and TK Lee to the package contributors list
- updated WriteR.pyw
- fixed small typos
- added MakeSlidy() which takes a folder of Rmd files and turns them into a slidy presentation

# v0.25.3
- WriteR() failed for JYS. Suggestion to use file.path() from HB added to WriteR(). Proved insufficient so hard wired quote marks for command line being issued have been included. JYS reported success.
- fixed URL for CRAN repository of package in CITATION file
- then fixed a bunch of other URLs from http to https in DESCRIPTION and vignette files.
- added folder of templates for (fairly) common analyses which are slightly beyond the OneFactor(), OnePredictor() etc 
type; it will also include the code chunks that are reused frequently in other functions.