@@ -44,6 +44,7 @@ S3method(MakeAccessibleSVG,default)
 S3method(plot,fittedlineplot)
 S3method(plot,scatterplot)
 S3method(plot,tsplot)
+S3method(print,description)
 S3method(print,fittedlineplot)
 S3method(print,scatterplot)
 S3method(print,tsplot)
